added attributes first/last name, and created value object for represent person name
